--- a/package.json
+++ b/package.json
@@ -1,73 +1,83 @@
 {
-  "name": "my-app",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
+  "name": "di",
+  "version": "0.0.2",
+  "private": true,
+  "type": "module",
+  "license": "MIT",
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
-  "jest": {
-    "preset": "jest-expo"
+  "scripts": {
+    "dev": "vite",
+    "build": "webpack --config webpack.config.js",
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "write": "prettier --write .",
+    "test:unit": "vitest",
+    "test": "jest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-camera-roll/camera-roll": "^7.8.3",
-    "@react-native-community/netinfo": "11.3.1",
-    "@react-native-picker/picker": "^2.7.5",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/stack": "^6.4.1",
-    "@reduxjs/toolkit": "^2.3.0",
-    "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-av": "~14.0.7",
-    "expo-camera": "~15.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-video": "^1.2.7",
-    "expo-video-thumbnails": "~8.0.0",
-    "expo-web-browser": "~13.0.3",
-    "ffmpeg": "^0.0.4",
-    "hls.js": "^1.5.17",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-camera": "^4.2.1",
-    "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-snap-carousel": "^3.9.1",
-    "react-native-swiper": "^1.6.0",
-    "react-native-video": "^6.7.0",
-    "react-native-vision-camera": "^2.15.4",
-    "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "react-spring": "^9.7.4"
+    "pinia": "^2.3.0",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
-  },
-  "private": true
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/js": "^9.17.0",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^22.10.2",
+    "@types/vue": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.7.0",
+    "babel-loader": "^9.2.1",
+    "conventional-changelog-cli": "^5.0.0",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.14.0",
+    "html-webpack-plugin": "^5.6.3",
+    "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jsdom": "^25.0.1",
+    "lint-staged": "^15.3.0",
+    "mini-css-extract-plugin": "^2.9.2",
+    "npm-run-all2": "^7.0.2",
+    "prettier": "^3.4.2",
+    "sass-embedded": "^1.83.0",
+    "standard-version": "^9.5.0",
+    "style-loader": "^4.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.19.0",
+    "vite": "^6.0.5",
+    "vite-plugin-vue-devtools": "^7.6.8",
+    "vitest": "^2.1.8",
+    "vue": "^3.5.13",
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^0.1.0",
+    "vue-tsc": "^2.1.10",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
+  }
 }
